# common_interfaces

./: .gitignore  APIReviewFoxy.md  CODEOWNERS  CONTRIBUTING.md  README.md
ackermann_msgs/: CMakeLists.txt  README.rst  package.xml
ackermann_msgs/msg/: AckermannDrive.msg  AckermannDriveStamped.msg
actionlib_interfaces/: CMakeLists.txt  package.xml
actionlib_interfaces/msg/: GoalID.msg  GoalStatusArray.msg
actionlib_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
builtin_interfaces/: CMakeLists.txt  package.xml
common_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
diagnostic_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
diagnostics_interfaces/: CMakeLists.txt  package.xml
diagnostics_interfaces/msg/: DiagnosticArray.msg
diagnostics_msgs/: CMakeLists.txt  package.xml
docs/: APIReviewFoxy.md
geometry_interfaces/: CMakeLists.txt  package.xml
geometry_interfaces/msg/: PointStamped.msg  PolygonStamped.msg  PoseArray.msg  PoseStamped.msg  PoseWithCovarianceStamped.msg  QuaternionStamped.msg  TransformStamped.msg  TwistStamped.msg  TwistWithCovarianceStamped.msg  Vector3Stamped.msg  WrenchStamped.msg
geometry_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
geometry_msgs/msg/: Polygon.msg  PolygonInstance.msg  PolygonInstanceStamped.msg  PolygonStamped.msg  PoseStampedArray.msg  TransformStamped.msg  Vector3.msg  Vector3Stamped.msg  VelocityStamped  VelocityStamped.msg
introspection_msgs/: CMakeLists.txt  package.xml
introspection_msgs/msg/: ROSMeta.msg
lifecycle_msgs/: CMakeLists.txt  package.xml
lifecycle_msgs/msg/: Transition.msg
lifecycle_msgs/srv/: ChangeState.srv
nav_interfaces/: CMakeLists.txt  package.xml
nav_interfaces/msg/: GridCells.msg  MapMetaData.msg  OccupancyGrid.msg  Odometry.msg  Path.msg
nav_interfaces/srv/: GetPlan.srv
nav_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
nav_msgs/action/: GetMap.action
nav_msgs/msg/: GridCells.msg  MapMetaData.msg  OccupancyGrid.msg  Odometry.msg  Path.msg  PoseParticleCloud.msg
nav_msgs/srv/: GetMap.srv  GetPlan.srv  SetMap.srv
rosgraph_msgs/: CMakeLists.txt  package.xml
rosgraph_msgs/msg/: Clock.msg
sensor_interfaces/: CMakeLists.txt  package.xml
sensor_interfaces/msg/: CameraInfo.msg  CompressedImage.msg  FluidPressure.msg  Illuminance.msg  Image.msg  Imu.msg  JointState.msg  Joy.msg  LaserScan.msg  MagneticField.msg  MultiDOFJointState.msg  MultiEchoLaserScan.msg  NavSatFix.msg  PointCloud.msg  PointCloud2.msg  Range.msg  RelativeHumidity.msg  Temperature.msg  TimeReference.msg
sensor_interfaces/srv/: SetCameraInfo.srv
sensor_msg_utils/: CMakeLists.txt  package.xml
sensor_msg_utils/include/sensor_msg_utils/: distortion_models.hpp
sensor_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
sensor_msgs/include/sensor_msgs/: distortion_models.hpp  field_generators.hpp  field_properties.hpp  fill_image.hpp  image_encodings.hpp  point_cloud2_iterator.hpp  point_cloud_conversion.hpp  point_cloud_msg_wrapper.hpp  point_field_conversion.hpp  type_traits.hpp
sensor_msgs/include/sensor_msgs/impl/: point_cloud2_iterator.hpp
sensor_msgs/msg/: BatteryState.msg  CameraInfo.msg  CompressedImage.msg  Image.msg  ImageWithCameraInfo.msg  MultiDOFJointState.msg  NavSatFix.msg  NavSatStatus.msg  PointCloud.msg  PointField.msg  Range.msg
sensor_msgs/test/: test_image_encodings.cpp  test_point_cloud_msg_wrapper.cpp  test_pointcloud.cpp  test_pointcloud_conversion.cpp  test_pointcloud_iterator.cpp
sensor_msgs_py/: CHANGELOG.rst  LICENSE  package.xml  setup.cfg  setup.py
sensor_msgs_py/sensor_msgs_py/: numpy_compat.py  point_cloud2.py
sensor_msgs_py/test/: test_flake8.py  test_pep257.py  test_point_cloud2.py
shape_interfaces/: CMakeLists.txt  package.xml
shape_interfaces/msg/: Mesh.msg  SolidPrimitive.msg
shape_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
shape_msgs/msg/: SolidPrimitive.msg
std_interfaces/: CMakeLists.txt  package.xml
std_interfaces/msg/: Header.msg
std_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
std_msgs/msg/: Bool.msg  Byte.msg  ByteMultiArray.msg  Char.msg  ColorRGBA.msg  Empty.msg  Float32.msg  Float32MultiArray.msg  Float64.msg  Float64MultiArray.msg  Int16.msg  Int16MultiArray.msg  Int32.msg  Int32MultiArray.msg  Int64.msg  Int64MultiArray.msg  Int8.msg  Int8MultiArray.msg  MultiArrayDimension.msg  MultiArrayLayout.msg  String.msg  StringArray.msg  UInt16.msg  UInt16MultiArray.msg  UInt32.msg  UInt32MultiArray.msg  UInt64.msg  UInt64MultiArray.msg  UInt8.msg  UInt8MultiArray.msg
std_srvs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
std_srvs/srv/: SetDouble.srv  SetFloat.srv  SetInt.srv  SetString.srv
stereo_interfaces/: CMakeLists.txt  package.xml
stereo_interfaces/msg/: DisparityImage.msg
stereo_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
test_msgs/: CMakeLists.txt  package.xml
test_msgs/include/test_msgs/: message_fixtures.hpp  service_fixtures.hpp
test_msgs/msg/: FieldsWithSameType.msg
test_msgs/src/test_msgs/: message_fixtures.py
trajectory_interfaces/: CMakeLists.txt  package.xml
trajectory_interfaces/msg/: JointTrajectory.msg  JointTrajectoryPoint.msg  MultiDOFJointTrajectory.msg  MultiDOFJointTrajectoryPoint.msg
trajectory_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
unique_identifier_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
unique_identifier_msgs/msg/: UniqueID.msg
uuid_msgs/: CMakeLists.txt  package.xml
visualization_interfaces/: CMakeLists.txt  package.xml
visualization_interfaces/msg/: ImageMarker.msg  InteractiveMarker.msg  InteractiveMarkerControl.msg  InteractiveMarkerFeedback.msg  InteractiveMarkerPose.msg  Marker.msg
visualization_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
(+9 files in other folders)
