<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_msgs</name>
  <version>0.5.1</version>
  <description> ROS messages for robots using Ackermann steering.</description>
  <maintainer email="jannik.abbenseth@ipa.fraunhofer.de">Jannik Abbenseth</maintainer>
  <author email="jack.oquin@gmail.com">Jack O'Quin</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
