<?xml version="1.0"?>
<package format="2">
  <name>sensor_msg_utils</name>
  <version>0.0.0</version>
  <description>Utilities to go along with sensor_msgs</description>
  <author>Chris Lalancette</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
