<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_msgs_py</name>
  <version>2.2.4</version>
  <description>A package for easy creation and reading of PointCloud2 messages in Python.</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>BSD</license>
  <author email="sebastian.grans@gmail.com">Sebastian Grans</author>

  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
