<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_msgs_py</name>
  <version>5.3.5</version>
  <description>A package for easy creation and reading of PointCloud2 messages in Python.</description>

  <maintainer email="tfoote@openrobotics.org">Tully Foote</maintainer>

  <license>BSD</license>

  <author email="geoff@openrobotics.org">Geoffrey Biggs</author>
  <author email="michael@openrobotics.org">Michael Carroll</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="sebastian.grans@gmail.com">Sebastian Grans</author>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
