<?xml version="1.0"?>
<package format="2">
  <name>shape_interfaces</name>
  <version>0.0.0</version>
  <description>A package containing some message definitions which describe geometric shapes.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>geometry_interfaces</build_depend>

  <exec_depend>geometry_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
