<?xml version="1.0"?>
<package format="2">
  <name>shape_msgs</name>
  <version>0.0.0</version>
  <description>A package containing some message definitions which describe geometric shapes.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
