<?xml version="1.0"?>
<package format="2">
  <name>stereo_interfaces</name>
  <version>0.0.0</version>
  <description>A package containing some stereo camera related message definitions.</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>sensor_interfaces</build_depend>
  <build_depend>std_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_interfaces</exec_depend>
  <exec_depend>std_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
