<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>unique_identifier_msgs</name>
  <version>1.1.0</version>
  <description>
    ROS messages for universally unique identifiers.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/unique_identifier_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
